--- a/Webseguro/Webseguro.csproj
+++ b/Webseguro/Webseguro.csproj
@@ -5,6 +5,11 @@
     <UserSecretsId>aspnet-Webseguro-6B22C991-BD0E-4427-9F58-662C8E8D8023</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>false</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.15" />
